Agregué animaciones básicas a las páginas

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -63,12 +63,13 @@
             <section class="preguntas row">
                 <div class="container my-4 p-4 px-xl-5">
                     
-                    <div class="stu-titulo px-xl-4">
+                    <div class="stu-titulo px-xl-4" data-aos="fade-right">
                         <h2>PREGUNTAS<br>FRECUENTES</h2>
                         <hr>
                     </div>
 
-                    <div class="accordion" id="faqacordeon">
+                    <div class="accordion" id="faqacordeon" data-aos="fade-right"
+                    data-aos-duration="800">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
