Añadí extend, map y mixin. Optimicé SEO

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Te damos la bienvenida al Museo de Sitio Chan Chan. Explora el Museo • Tours • Actividades • FAQ • Contacto • VWXM+XPM, Av. Mansiche, Carretera Huanchaco">
     <title>Museo Chan Chan | FAQ</title>
 
     <!-- Fuente Roboto -->
@@ -50,7 +51,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <div class="contacto">
-                                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                                        <a class="nav-link link-light" href="./contacto.html">Contacto</a>
                                     </div>
                                 </li>
                             </ul>
@@ -128,7 +129,7 @@
                         <a class="col-12 col-xl-2 d-xl-flex justify-content-center" href="./tours.html">TOURS</a>
                         <a class="col-12 col-xl-2 d-xl-flex justify-content-center" href="./actividades.html">ACTIVIDADES</a>
                         <a class="col-12 col-xl-2 d-xl-flex justify-content-center" href="./faq.html">FAQ</a>
-                        <a class="col-12 col-xl-2 d-xl-flex justify-content-center" href="./contacto.html">CONTACTO</a>
+                        <a class="lfcontacto col-12 col-xl-2 d-xl-flex justify-content-center" href="./contacto.html">CONTACTO</a>
                     </div>
     
                     <div class="fdatos container mt-5">
