--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Te damos la bienvenida al Museo de Sitio Chan Chan. Explora el Museo • Tours • Actividades • FAQ • Contacto • VWXM+XPM, Av. Mansiche, Carretera Huanchaco">
     <title>Museo Chan Chan | Contacto</title>
 
     <!-- Fuente Roboto -->
@@ -50,7 +51,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <div class="contacto">
-                                        <a class="nav-link active" href="./contacto.html">Contacto</a>
+                                        <a class="nav-link active link-light" href="./contacto.html">Contacto</a>
                                     </div>
                                 </li>
                             </ul>
@@ -60,9 +61,9 @@
     
             </header>
 
-            <section class="forma row py-5 pe-xl-5 justify-content-end">
+            <section class="forma row py-5 pe-xl-5 justify-content-center">
 
-                <div class="col-12 col-xl-6">
+                <div class="col-12 col-xl-5">
                     <div class="mb-3 nombre">
                     <label for="exampleFormControlInput1" class="form-label"></label>
                     <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
@@ -117,7 +118,7 @@
                         <a class="col-12 col-xl-2 d-xl-flex justify-content-center" href="./tours.html">TOURS</a>
                         <a class="col-12 col-xl-2 d-xl-flex justify-content-center" href="./actividades.html">ACTIVIDADES</a>
                         <a class="col-12 col-xl-2 d-xl-flex justify-content-center" href="./faq.html">FAQ</a>
-                        <a class="col-12 col-xl-2 d-xl-flex justify-content-center" href="./contacto.html">CONTACTO</a>
+                        <a class="lfcontacto col-12 col-xl-2 d-xl-flex justify-content-center" href="./contacto.html">CONTACTO</a>
                     </div>
     
                     <div class="fdatos container mt-5">
