Levantamiento final de observaciones

--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -382,7 +382,7 @@
                         <img class="img-fluid" src="../img-museo/vista-muro-chan-chan-opt.jpg" alt="vista de un muro de chan chan">
                     </div>
                     <div class="col-xl-4 py-4">
-                        <img class="img-fluid" src="../img-museo/img-mujeres-taller-opt.jpg" alt="mujeres tejiendo totora">
+                        <img class="img-fluid" src="../img-museo/img-clases-pintura.jpg" alt="profesor instruyendo a niño cómo pintar una cerámica">
                     </div>
                 </div>
 
@@ -435,7 +435,7 @@
                             <div class="f-logo d-xl-flex flex-column align-items-center">
                                 <img src="../img-museo/logo-chan-chan-blanco.png" alt="logo insitución" width="150">
                             </div>
-                            <p>museochanchan@gob.pe <br>+ 11 111 111 111 <br>Neque ad commodi pariatur quis tempore</p>
+                            <p>museochanchan@gob.pe <br>+ (044) 234862 <br>VWXM+XPM, Av. Mansiche, Huanchaco 13011</p>
         
                         </article>
                     </div>
