--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -68,7 +68,7 @@
                     <p>Para consultar sobre tours, dejarnos tu opinión o recibir más información, envía un mensaje y te contactaremos pronto.</p>
                 </div>
 
-                <div class="col-12 my-2 col-xl-5">
+                <div class="formulario col-12 my-2 col-xl-5">
                     <div class="mb-3 nombre">
                     <label for="input-nombre" class="form-label"></label>
                     <input type="text" class="form-control" id="input-nombre" placeholder="Nombre">
@@ -160,7 +160,7 @@
                                 <div class="f-logo d-xl-flex flex-column align-items-center">
                                     <img src="../img-museo/logo-chan-chan-blanco.png" alt="logo insitución" width="150">
                                 </div>
-                                <p>museochanchan@gob.pe <br>+ 11 111 111 111 <br>Neque ad commodi pariatur quis tempore</p>
+                                <p>museochanchan@gob.pe <br>+ (044) 234862 <br>VWXM+XPM, Av. Mansiche, Huanchaco 13011</p>
             
                             </article>
                         </div>
