--- a/pages/faq.html
+++ b/pages/faq.html
@@ -168,7 +168,7 @@
                                 <div class="f-logo d-xl-flex flex-column align-items-center">
                                     <img src="../img-museo/logo-chan-chan-blanco.png" alt="logo insitución" width="150">
                                 </div>
-                                <p>museochanchan@gob.pe <br>+ 11 111 111 111 <br>Neque ad commodi pariatur quis tempore</p>
+                                <p>museochanchan@gob.pe <br>+ (044) 234862 <br>VWXM+XPM, Av. Mansiche, Huanchaco 13011</p>
             
                             </article>
                         </div>
